...
import java.io.File

@Immutable
data class PeriodTime(val start: String, val end: String)

fun defaultPeriodTimes() = listOf(
    PeriodTime("08:00", "08:45"), PeriodTime("08:55", "09:40"),
    PeriodTime("10:10", "10:55"), PeriodTime("11:05", "11:50"),
    PeriodTime("14:30", "15:15"), PeriodTime("15:25", "16:10"),
    PeriodTime("16:20", "17:05"), PeriodTime("17:15", "18:00"),
    PeriodTime("18:40", "19:25"), PeriodTime("19:35", "20:20"),
    PeriodTime("20:30", "21:15"), PeriodTime("21:15", "22:00")
)
...
